--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -4,7 +4,7 @@
             <button type="button" class="btn btn-primary">Add</button>
         </a>
     </h2>
-    <table class="table table-bordered mt-5">
+    <table class="table table-sm table-bordered table-striped mt-5">
         <thead>
             <tr>
                 <th>ID</th>
